@@ -204,6 +204,35 @@ local function postmacro (f, ...)
   return false
 end
 
+local function safe_tostring (obj)
+  local success, str = pcall(tostring, obj)
+  if not success then
+    if type(str)~="string" then
+      str = string.format("(error object is a %s value)", type(str))
+    end
+    return nil, str
+  elseif type(str)~="string" then
+    return nil, "'__tostring' must return a string"
+  else
+    return str
+  end
+end
+
+local function formatErr (obj)
+  local tname = type(obj)
+  if tname=="number" then
+    obj = tostring(obj)
+  elseif tname~="string" then
+    local mt = debug.getmetatable(obj)
+    if mt and mt.__tostring~=nil then
+      obj = safe_tostring(obj) or "error in error handling"
+    else
+      obj = string.format("(error object is a %s value)", tname)
+    end
+  end
+  return obj
+end
+
 local function FixReturn (handle, ok, ...)
   local ret1, ret_type = ...
   if ok then
@@ -215,8 +244,7 @@ local function FixReturn (handle, ok, ...)
       return F.MPRT_NORMALFINISH, pack(true, ...)
     end
   else
-    local msg = type(ret1)=="string" and ret1 or "(error object is not a string)"
-    msg = string.gsub(debug.traceback(handle.coro, msg), "\n\t", "\n   ")
+    local msg = string.gsub(debug.traceback(handle.coro, formatErr(ret1)), "\n\t", "\n   ")
     ErrMsg(msg)
     return F.MPRT_ERRORFINISH
   end
